<resources>
    <string name="app_name">Habit</string>
    <string name="txt_no_internet">No internet available! Please connect to internet to access the application</string>
    <string name="txt_login">Login</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="back_button">Back Button</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="change_password">Change Password</string>
    <string name="habit_name">Habit name</string>
    <string name="edit_habit">Edit Habit</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="add">Add</string>
    <string name="add_habit">Add Habit</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thur">Thur</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="otp">OTP</string>
    <string name="enter_otp">Enter the OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp_sent">OTP Sent</string>
    <string name="txt_empty_email_field">Email cannot be empty</string>
    <string name="txt_empty_otp_field">OTP cannot be empty</string>
    <string name="otp_sent_successfully">OTP sent successfully!</string>
    <string name="remember_me">Remember me</string>
    <string name="no_result">No result</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Your Username</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Your Email Address</string>
    <string name="txt_home">Home</string>
    <string name="txt_search">Search</string>
    <string name="txt_habit">Habit</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_welcome">Welcome</string>
    <string name="txt_today_goal">Today’s goal</string>
    <string name="txt_no_habit_for_today">No habit for today</string>
    <string name="add_habit_success">Habit Added Successfully!</string>
    <string name="edit_habit_success">Habit Edited Successfully!</string>
    <string name="delete_habit_success">Habit Deleted Successfully!</string>
    <string name="txt_confirm_mark_as_complete_dialog_title">Mark as complete</string>
    <string name="txt_confirm_mark_as_complete_dialog_message">Are you sure you want to mark this habit as complete?</string>
    <string name="txt_confirm_logout_dialog_title">Logout 😭?</string>
    <string name="txt_confirm_logout_dialog_message">Are you sure you want to Logout?</string>
    <string name="txt_change_password_dialog_title">Change Password</string>
    <string name="txt_edit_image_dialog_title">Edit Profile Image</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_habits">Habits</string>
    <string name="txt_empty_habits">No habits added by the user</string>
    <string name="txt_copy">Copy</string>
    <string name="txt_copied">Copied</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_empty_input_field">Input field must not be empty</string>
    <string name="txt_invalid_email">Invalid email address provided</string>
    <string name="txt_invalid_password">Invalid password provided, it must contain at least 8 characters</string>
    <string name="txt_password_not_matching">Password and confirm password does not match</string>
    <string name="today_s_goal">Today\'s Goal</string>
    <string name="my_habits">My Habits</string>
    <string name="edit_image">Edit Image</string>
    <string name="error_logging_out">Error Logging Out</string>
    <string name="txt_update">Update</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="txt_save">Save</string>
    <string name="txt_search_user_by_name_or_email">Search user by name or email</string>
    <string name="txt_no_habit_statistics">No habit statistics found</string>
    <string name="txt_cannot_undo_completed_habit">You cannot undo completed habit!</string>
</resources>