<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_text_input"
        android:paddingHorizontal="@dimen/_25sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/txt_confirm_logout_dialog_title"
            android:textColor="@color/app_text"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/txt_confirm_logout_dialog_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sub_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/txt_confirm_logout_dialog_message"
            android:textColor="@color/app_text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/tv_logout"
            app:layout_constraintStart_toStartOf="@id/tv_logout"
            app:layout_constraintTop_toBottomOf="@id/tv_logout"
            tools:text="@string/txt_confirm_logout_dialog_message" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_yes"
            style="@style/base_color_default_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/txt_yes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sub_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            style="@style/base_color_stroke_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/txt_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_yes" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>