<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.dalhousie.habit.viewmodel.home.SettingsViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_profile"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:padding="@dimen/_15sdp"
            android:src="@{viewModel.loggedInUserData.profileImage}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_profile_0" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_edit_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onEditImageClicked()}"
            android:padding="@dimen/_10sdp"
            android:text="@string/edit_image"
            android:textColor="@color/app_green"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_profile" />

        <!-- Username Section -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_edit_image" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bg_text_input"
            android:inputType="textPersonName"
            android:paddingVertical="@dimen/_12sdp"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_50sdp"
            android:text="@={viewModel.userName}"
            android:textColor="@color/app_text"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_username_label"
            tools:text="Testing the padding from the end so that I can confirm the save button" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:clickable="@{viewModel.hasUsernameChanged}"
            android:onClick="@{() -> viewModel.onSaveUsernameClicked()}"
            android:text="@string/txt_save"
            android:textColor="@color/app_green"
            android:visibility="@{viewModel.hasUsernameChanged ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="@id/et_username"
            app:layout_constraintEnd_toEndOf="@id/et_username"
            app:layout_constraintTop_toTopOf="@id/et_username" />

        <!-- Buttons -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_change_password"
            style="@style/default_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:onClick="@{() -> viewModel.onChangePasswordClicked()}"
            android:text="@string/change_password"
            app:layout_constraintBottom_toTopOf="@id/btn_logout"
            app:layout_constraintEnd_toEndOf="@id/et_username"
            app:layout_constraintStart_toStartOf="@id/et_username" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout"
            style="@style/stroke_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:onClick="@{() -> viewModel.logoutClicked()}"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/btn_change_password"
            app:layout_constraintStart_toStartOf="@id/btn_change_password" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
            app:indicatorColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>