<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_text_input"
        android:paddingHorizontal="@dimen/_25sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_change_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/txt_change_password_dialog_title"
            android:textColor="@color/app_text"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_old_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_app_color_stroke_button"
            android:hint="@string/enter_old_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/app_text"
            android:textColorHint="@color/app_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_change_password" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_old_password_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:src="@drawable/ic_eye"
            app:layout_constraintBottom_toBottomOf="@id/et_old_password"
            app:layout_constraintEnd_toEndOf="@id/et_old_password"
            app:layout_constraintTop_toTopOf="@id/et_old_password" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_new_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_app_color_stroke_button"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/app_text"
            android:textColorHint="@color/app_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_old_password" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_new_password_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:src="@drawable/ic_eye"
            app:layout_constraintBottom_toBottomOf="@id/et_new_password"
            app:layout_constraintEnd_toEndOf="@id/et_new_password"
            app:layout_constraintTop_toTopOf="@id/et_new_password" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_re_enter_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_app_color_stroke_button"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/app_text"
            android:textColorHint="@color/app_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_new_password" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_re_password_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:src="@drawable/ic_eye"
            app:layout_constraintBottom_toBottomOf="@id/et_re_enter_password"
            app:layout_constraintEnd_toEndOf="@id/et_re_enter_password"
            app:layout_constraintTop_toTopOf="@id/et_re_enter_password" />

        <!-- Update Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_update"
            style="@style/base_color_default_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/txt_update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_re_enter_password" />

        <!-- Cancel Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            style="@style/base_color_stroke_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/txt_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_update" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>